--- a/src/components/card-form/style.scss
+++ b/src/components/card-form/style.scss
@@ -33,18 +33,29 @@
     }
   }
 
-  &_btn.btn-success {
-    font-family: 'Inter', sans-serif;
-    letter-spacing: 0.035em;
+  &_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 16px;
     width: 100%;
-    height: 58px;
-    margin: 0 0 20px 0;
+    height: 55px;
+    border: initial;
+    border-radius: 8px;
+    cursor: pointer;
+    background: #3bfb65;
+    box-shadow: 0px 2.81481px 0px #02c82d;
+    border-radius: 8px;
+    color: #070707;
   }
 }
 
 @media (min-width: 680px) {
   .card-form_wrapper {
-    padding: 220px 24px 0 24px;
+    padding: 220px 24px 24px 24px;
     border-radius: 24px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
