--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 
 * {
   margin: 0;
@@ -11,5 +11,5 @@ a {
 }
 
 body {
-  background: #F6F6F6;
+  background: #f6f9ff;
 }
